Fix header spacing and add new collection categories

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@ button {
   min-height: 100vh;
 }
 
+main {
+  padding-top: calc(70px + var(--preview-banner-height, 0px));
+}
+
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
